tests/snapshots/snapshot_tests__array_double_inverse.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_double_inverse.vmt",
    status: Panic,
    used_instantiations: [],
}
