tests/snapshots/snapshot_tests__array_equiv_1.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_equiv_1.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!1 i 21656) i) 21656)",
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!1 i 21656) i) (Read-Int-Int Array-Int-Int!val!1 i))",
    ],
}
