tests/snapshots/snapshot_tests__array_equiv_2.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_equiv_2.vmt",
    status: Panic,
    used_instantiations: [],
}
