tests/snapshots/snapshot_tests__array_equiv_3.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_equiv_3.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!1 Z c) Z) c)",
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!1 Z c) Z) (Read-Int-Int Array-Int-Int!val!1 Z))",
    ],
}
